--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "basic": "^2.0.3",
-    "crx": "^4.0.1",
-    "keypair": "^1.0.1"
+    "keypair": "^1.0.1",
+    "crx": "^5.0.0"
   }
 }
